# cpp-image-segmentation

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/algorithm/: convert_to_gray_scale.cpp  edge_detection.cpp  image_processing.h  threshold.cpp
src/util/: image_util.cpp  image_util.h
